--- a/styles/main.css
+++ b/styles/main.css
@@ -41,7 +41,7 @@ body {
     font-family: Calibri, sans-serif;
     margin: auto;
     max-width: 80%;
-    letter-spacing: 0.2px;
+    letter-spacing: 0.02rem;
     padding-bottom: 10em;
 }
 
@@ -112,12 +112,12 @@ p {
     color: var(--text-color);
     text-align: left;
     padding-left: 7.5%;
-    font-size: 18px;
+    font-size: 1.15rem;
     font-family: Calibri, sans-serif;
 }
 
 img {
-    box-shadow: 0 2px 6px var(--shadow-color);
+    box-shadow: 0 0.1rem 0.3rem var(--shadow-color);
     overflow: scroll;
     max-width: 100%;
     margin-right: 1%;
@@ -130,65 +130,58 @@ img {
     grid-template-columns: 50% auto;
 }
 
-main > p {
-    padding: 0;
-    margin-left: 10px;
-    margin-right: 10px;
-    margin-top: 24px;
-}
-
 /* Grid */
 .thingyGrid {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     border-color: var(--row-border-color);
-    border-style: dashed;
+    border-style: dotted hidden;
     /* the size of the dots */
-    border-width: 5px;
+    border-width: 0.06rem;
     margin-bottom: 1%;
 }
 
 .thingyColumn {
     width: 47%;
     padding: 1.5%;
-    margin-top: -10px;
-    margin-bottom: -10px;
+    margin-top: -1rem;
+    margin-bottom: -0.6rem;
 }
 
 /* Cards */
 .card {
-    box-shadow: 0 4px 6px 0 var(--shadow-color);
-    padding: 0 8px 8px;
+    box-shadow: 0 0.2rem 0.3rem 0 var(--shadow-color);
+    padding: 0 0.4rem 0.4rem;
     text-align: center;
     background-color: var(--code-bg-color);
     /* this is the part that gives you "separation" between cards */
-    margin: 16px 0;
+    margin: 0.8rem 0;
 }
 
 .card > p {
     padding-left: 0;
     text-align: center;
-    margin-top: -18px;
+    margin-top: -1.1rem;
     font-family: Segoe UI, sans-serif;
 }
 
 .card > h3 {
     font-family: Segoe UI Light, sans-serif;
-    padding: 12px 0 0 0;
-    font-size :24px;
+    padding: 0.8rem 0 0 0;
+    font-size: 1.6rem;
     color:var(--text-color)
 }
 
 /* Article division */
 .art > p {
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 .art h2 {
     margin: auto;
     color: var(--header-color);
-    font-size: 36px;
+    font-size: 2.4rem;
     font-family: Calibri, sans-serif;
     text-align: center;
 }
@@ -230,11 +223,16 @@ a:visited:hover {
 
 footer {
     p {
-        margin: 6px auto;
-        font-size: 16px;
+        margin: 0.4rem auto;
+        font-size: 1.2rem;
         text-align: center;
         padding:0;
     }
+}
+
+/* center class */
+.centered {
+    text-align: center;
 }
 
 /* Rough "by hand" reactive resizing window thing */
