--- a/styles/subpages.css
+++ b/styles/subpages.css
@@ -280,7 +280,7 @@ li > a {
     margin-top: 0.2rem;
     margin-bottom: 0.2rem;
     font-size: 1.2rem;
-    padding: 1rem 0.8rem;
+    padding: 0.75rem 0.8rem;
 }
 li > a:hover {
     background-color: var(--topnav-color);
@@ -290,7 +290,10 @@ li > a:hover {
 li > a:visited:hover {
     color: var(--active-color);
 }
-
+.listtext {
+    padding: 0;
+    margin: 0;
+}
 
 /* literally just center class */
 .centered {
